Switch to Log::Log4perl

--- a/config/.env
+++ b/config/.env
@@ -15,5 +15,7 @@ MOJO_DB__bravo__password=ojom
 # Enable/disable display connection details.
 MOJO_DB_DEBUG=0
 
-# development or production
-MOJO_MODE=development
+# prod
+# dev  - for any dev stage (master, rc, specific branch).
+# test - for running unit tests.
+MOJO_MODE=dev
