Fix for logger and mojo mode + added support for csv, txt, html, xls and xlsx response formats

--- a/config/.env
+++ b/config/.env
@@ -1,8 +1,7 @@
 # Logging.
 # Logging levels order: trace, debug, info, warn, error, fatal.
-MOJO_LOG_LEVEL=trace
+#MOJO_LOG_LEVEL=trace
 #MOJO_LOG_FILE=/tmp/easy_mojo.log # /var/log/easy_mojo.log  # commented means the whole output goes to STDERR.
-# If you need to switch to log4perl:
 LOG4PERL_CONFIG_FILE=config/log/log4perl.test.conf
 
 # DB configs (usernames, passwords, hosts, etc).
