Wrote more mature tests + improvements in tests + fix for routing + fix for response format

--- a/config/.env
+++ b/config/.env
@@ -2,7 +2,8 @@
 # Logging levels order: trace, debug, info, warn, error, fatal.
 #MOJO_LOG_LEVEL=trace
 #MOJO_LOG_FILE=/tmp/easy_mojo.log # /var/log/easy_mojo.log  # commented means the whole output goes to STDERR.
-LOG4PERL_CONFIG_FILE=config/log/log4perl.test.conf
+# LOG4PERL_CONFIG_FILE=config/log/log4perl.local.file.conf
+LOG4PERL_CONFIG_FILE=config/log/log4perl.local.stdout.conf
 
 # DB configs (usernames, passwords, hosts, etc).
 # Common parts of configs are in config/db.yaml
