Added option: exit when first test failed

--- a/config/.env
+++ b/config/.env
@@ -15,6 +15,9 @@ MOJO_DB__bravo__password=ojom
 # Enable/disable display connection details.
 MOJO_DB_DEBUG=0
 
+# Exit when the first test fails.
+MOJO_TEST_EXIT=0
+
 # prod
 # dev  - for any dev stage (master, rc, specific branch).
 # test - for running unit tests.
