ORM layer refactoring + added possibility to handle other types of DBs

--- a/config/.env
+++ b/config/.env
@@ -6,9 +6,9 @@
 LOG4PERL_CONFIG_FILE=config/log/log4perl.local.stdout.conf
 
 # DB configs (usernames, passwords, hosts, etc).
-# Common parts of configs are in config/db.yaml
-# Here you can add/override some config variables for specific DSNs.
-# MOJO_DB__<dsn>__<domain,driver,database,passwd,etc>
+# Common parts of configs are in config/model/db.yml
+# Here you can add/override some config variables for a specific DSN.
+# Schema: MOJO_DB__<dsn>__<domain,driver,database,passwd,etc>
 MOJO_DB__bravo__username=mojo
 MOJO_DB__bravo__password=ojom
 
