Improvements in launching mojo

--- a/config/.env
+++ b/config/.env
@@ -21,4 +21,5 @@ MOJO_TEST_EXIT=0
 # prod
 # dev  - for any dev stage (master, rc, specific branch).
 # test - for running unit tests.
+# This env var is set on the docker-compose.yml level.
 MOJO_MODE=dev
