--- a/config/.env
+++ b/config/.env
@@ -5,12 +5,21 @@
 # LOG4PERL_CONFIG_FILE=config/log/log4perl.local.file.conf
 LOG4PERL_CONFIG_FILE=config/log/log4perl.local.stdout.conf
 
+# Settings for postgres container.
+# This is a basic database. Other target databases will be created later (bin/create_pg_db.pl).
+POSTGRES_DB=postgres
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_USER=mojo 
+POSTGRES_PASSWORD=ojom
+# POSTGRES_DATA_DIR=db/postgres
+
 # DB configs (usernames, passwords, hosts, etc).
 # Common parts of configs are in config/model/db.yml
 # Here you can add/override some config variables for a specific DSN.
 # Schema: MOJO_DB__<dsn>__<domain,driver,database,passwd,etc>
-MOJO_DB__bravo__username=mojo
-MOJO_DB__bravo__password=ojom
+MOJO_DB__delta__username=mojo
+MOJO_DB__delta__password=ojom
 
 # Enable/disable display connection details.
 MOJO_DB_DEBUG=0
