--- a/config/routing.yml
+++ b/config/routing.yml
@@ -30,6 +30,9 @@
 # Based on Redis.
 - package_name: V1::Baz
   actions: [list, get, add, update, delete]
+# Based on PostgreSQL.
+- package_name: V1::Fruit
+  actions: [list, get, add, update, delete]
 # Based on gateway to https://dummyjson.com.
 - package_name: V2::Product
   actions: [list, get, add, update]
