--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,27 +14,46 @@ services:
     environment:
       MOJO_MODE: ${MOJO_ENV:-dev}
       MOJO_DB_MIGRATIONS: ${MOJO_DB_MIGRATIONS:-1}
+    env_file:
+      - "${PWD}/config/.env"
     volumes:
       - "${PWD}:/easy_mojo"
     # Mapping ports: host:container
     ports:
       - "${EASY_MOJO_PORT:-3000}:3000"
+    depends_on:
+      - postgresql
     networks:
       - backend
 
-  # postgresql:
-  #   image: postgres:15.2-alpine
-  #   container_name: postgres
-  #   restart: always
-  #   environment:
-  #     POSTGRES_PASSWORD: example
-  #   # volumes:
-  #   #   - ${PWD}/db/postgres:/var/lib/postgresql/data
-  #   # Mapping ports: host:container
-  #   ports:
-  #     - "5432:5432"
-  #   networks:
-  #     - backend
+  postgresql:
+    # build: 
+    #   context: .
+    #   dockerfile: "${PWD}/docker/Dockerfile.postgres"
+    #   args:
+    #     uid: ${USER_ID}
+    #     gid: ${GROUP_ID}
+    #     user_name: ${USER_NAME}
+    #     group_name: ${GROUP_NAME}
+    # image: postgres:latest
+    image: postgres:15.2-alpine
+    container_name: postgres
+    restart: always
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      # Read about PGDATA here: https://hub.docker.com/_/postgres
+      # PGDATA: /var/lib/postgresql/data/pgdata
+    # user: "${USER_ID}:${GROUP_ID}"
+    # volumes:
+      # - ${PWD}/${POSTGRES_DATA_DIR}:/var/lib/postgresql/data
+      # - ${PWD}/docker/postgres_entrypoint.sh:/docker-entrypoint-initdb.d/postgres_entrypoint.sh 
+    # Mapping ports: host:container
+    ports:
+      - "5432:5432"
+    networks:
+      - backend
 
   # adminer:
   #   image: adminer
