Cleanup env variables + proper implementation of .env support in bash scripts

--- a/config/.env
+++ b/config/.env
@@ -6,7 +6,7 @@
 LOG4PERL_CONFIG_FILE=config/log/log4perl.local.stdout.conf
 
 # Settings for postgres container.
-# This is a basic database. Other target databases will be created later (bin/create_pg_db.pl).
+# The "postgres" is a basic PG database. Other target PG databases will be created later (bin/generate_pg_db.pl).
 POSTGRES_DB=postgres
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
@@ -25,10 +25,12 @@ MOJO_DB__delta__password=ojom
 MOJO_DB_DEBUG=0
 
 # Exit when the first test fails.
+# Really useful when fixing unit tests.
 MOJO_TEST_EXIT=0
 
 # prod
 # dev  - for any dev stage (master, rc, specific branch).
 # test - for running unit tests.
 # This env var is set on the docker-compose.yml level.
-MOJO_MODE=dev
+# Direct usage of MOJO_MODE does not work.
+MOJO_ENV=dev
