--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     container_name: easy_mojo
     environment:
       MOJO_MODE: ${MOJO_ENV:-dev}
-      MOJO_DB_MIGRATIONS: ${MOJO_DB_MIGRATIONS:-1}
+      MOJO_DB_CREATE: ${MOJO_DB_CREATE:-0}
+      MOJO_DB_MIGRATIONS: ${MOJO_DB_MIGRATIONS:-0}
     env_file:
       - "${PWD}/config/.env"
     volumes:
